# LemuelExcelExporter

./: .gitignore  README.md  pyproject.toml
apps/excel_manager/: apps.py  urls.py  views.py
apps/excel_manager/services/: excel_summarizer.py  file_handler.py
config/: settings.py  urls.py
templates/: base.html
templates/excel_manager/: home.html
