[tool.poetry]
name = "lemuelexcelexporter"
version = "0.1.0"
description = ""
authors = ["Fruitellar <109595648+Fruitellar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
pandas = "^1.5.2"
XlsxWriter = "^3.0.3"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
